--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Калькулятор материалов для балконов К2" />
     <title>Balcony Calculator</title>
-    <link rel="stylesheet" href="/styles.css" />
-    <link rel="icon" href="/favicon.ico.png" type="image/png" />
+    <link rel="stylesheet" href="/public/styles.css" />
+    <link rel="icon" href="/public/favicon.ico.png" type="image/png" />
   </head>
   <body>
     <div class="container">
