--- a/public/index.html
+++ b/public/index.html
@@ -1583,6 +1583,8 @@
       </div>
     </div>
 
-    <script type="module" src="/assets/index.js"></script>
+    <script type="module" src="/src/modules/main.js"></script>
+</body>
+</html>
   </body>
 </html>
